tests/negative/neg_result_mutated.safe
-- Test: neg_result_mutated
-- Description: Variant field access after mutation within guarded branch.
--   The branch on R.OK establishes the discriminant, but the subsequent
--   assignment to R invalidates it. Accessing R.Value after mutation
--   without re-guarding violates the discriminant-check safety rule.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.12.p148
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.6.p139f
-- Expected: REJECT discriminant_check_not_established

package Neg_Result_Mutated

   type Error_Code is range 0 to 255;

   type Parse_Result (OK : Boolean = False) is record
      case OK
         when True
            Value : Integer;
         when False
            Error : Error_Code;



   function Try_Parse (Input : Integer) returns Parse_Result

      if Input >= 0
         return (OK = True, Value = Input);
      else
         return (OK = False, Error = 1);



   --  NONCONFORMING: R.OK = True is established by the guard, but
   --  the assignment R = Try_Parse(Other) invalidates the fact.
   --  Accessing R.Value after mutation is rejected.
   function Unsafe_After_Mutation (First : Integer;
                                   Second : Integer) returns Integer
      R : Parse_Result = Try_Parse (First);

      if R.OK
         R = Try_Parse (Second);  -- invalidates R.OK = True
         return R.Value;          -- REJECTED: R.OK no longer established
      else
         return 0;




